[package]
name = "grug-say"
version = "0.1.0"
edition = "2021"
authors = ["Holland Gibson (self aware smol brain) <dev@hollandgibson.com>"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
log = "0.4.22"

